--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
+    <header style="background-image: url('images/pattern.webp');">
         <h1>Dasmoto's Arts & Crafts</h1>
     </header>
-    <div class="brush">
-      <h2>Brushes</h2>
+    <div>
       <article class="brushes">
+      <h2>Brushes</h2>
+      <img src="/images/hacksaw.webp" alt="">
         <h3>Hacksaw Brushes</h3>
         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint on lagre amounts. Available in different sizes</p>
         <p class="offer">Starting at $3.00 / brush.</p>
       </article>
     </div>
-    <div class="frame">
-      <h2>Frames</h2>
+    <div>
       <article class="frames">
+      <h2>Frames</h2>
+      <img src="/images/frames.webp" alt="">
         <h3>Art Frames (assorted)</h3>
         <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. </p>
         <p class="offer">Starting at $2.00 / frame.</p>
       </article>
     </div>
-    <div class="paint">
+    <div>
+      <article class="paint">
       <h2>Paint</h2>
-      <article class="brushes">
-        <h3>Clean Finnish Paint/h3>
+      <img src="/images/finnish.jpeg" alt="">
+        <h3>Clean Finnish Paint</h3>
         <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. </p>
         <p class="offer">Starting at $5.00 / tube.</p>
       </article>
